app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appserver-deployment
spec:
  replicas: 3

  selector:
    matchLabels:
      server: appserver
  template:
    metadata:
      labels:
        server: appserver
    spec:
      containers:
        - name: appserver
          image: appserver:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
