app/service.yaml
apiVersion: v1

kind: Service
metadata:
  name: appserver-clusterip-service
spec:
  type: ClusterIP

  ports:
  - port: 80 
    targetPort: 3000
  
  selector:
    server: appserver
